Finished GitHub API Code Practice

--- a/index.html
+++ b/index.html
@@ -1,20 +1,26 @@
 <html>
+
 <head>
-  <meta charset='UTF-8'/>
-  <meta name='viewport' content='width=device-width, initial-scale=1.0'/>
-  <meta http-equiv='X-UA-Compatible' content='ie=edge'/>
+  <meta charset='UTF-8' />
+  <meta name='viewport' content='width=device-width, initial-scale=1.0' />
+  <meta http-equiv='X-UA-Compatible' content='ie=edge' />
   <title>Document</title>
   <script src='js/index.js'></script>
-  <link rel='stylesheet' href='index.css'/>
+  <link rel='stylesheet' href='index.css' />
 </head>
+
 <body>
   <div id='main'>
 
     <h2>GitHub Search</h2>
 
     <form id='github-form'>
-      <input id='search' type='text' name='search'>
-      <input type='submit' name='submit'/>
+      <input id='search' type='text' name='search' />
+      <input type='submit' name='submit' /><br>
+      <input type="radio" name="search" value="repos" id="repoRadio">
+      <label for="repoRadio">Search Repos</label>
+      <input type="radio" name="search" value="username" id="userRadio">
+      <label for="userRadio">Search Usernames</label>
     </form>
 
     <div id='github-container'>
@@ -30,4 +36,5 @@
   </div>
 
 </body>
+
 </html>
